tests/baselines/reference/overload2(strict=true).errors.txt
overload2.ts(4,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
overload2.ts(5,10): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
overload2.ts(11,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
overload2.ts(12,10): error TS2394: This overload signature is not compatible with its implementation signature.
overload2.ts(12,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.


==== overload2.ts (5 errors) ====
    enum A { }
    enum B { }
        
    function foo(a: A);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo(b: B);
             ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    // should be ok
    function foo(x: number) { 
    }
    
    class C { }
    function foo1(a: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(c: C);
             ~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 overload2.ts:14:10: The implementation signature is declared here.
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    // should be ok
    function foo1(x: number) { 
    }
    